<resources>
    <string name="app_name">NPIToolKit</string>
    <string name="action_settings">Settings</string>
    <string name="button_voice_compass">Voice Compass</string>
    <string name="button_gps_qr_point">GPS QR Point</string>
    <string name="button_gesture_photo">Gesture Photo</string>
    <string name="button_movement_sound">Movement Sound</string>
    <string name="button_surprise">Surprise</string>
    <string name="title_activity_qrgpspoint">QRGPSPoint</string>
    <string name="title_activity_voice_compass">VoiceCompass</string>
    <string name="title_activity_gesture_photo">GesturePhoto</string>
    <string name="title_activity_movement_sound">MovementSound</string>
    <string name="title_activity_surprise">Surprise</string>
    <string name="scan_QR">ScanQR</string>
    <string name="recognition">Recognice Voice</string>
    <string name="compass_data">Heading: 0.0</string>
    <string name="compass_description">Image that points to the right direction</string>
    <string name="movement_sound">May the force be with you.</string>
    <string name="compass_initMessage">Say -in spanish- a cardinal direction and an error margin</string>
    <string name="compass_internetError">Please, connect to the Internet</string>
    <string name="text_recognized">"Recognized text: "</string>
    <string name="compass_suggestion">You have to say something like: "norte 10" or "oeste 5"</string>
    <string name="camera_accesingError">"Error accessing file: "</string>
    <string name="camera_fileError">"File not found: "</string>
    <string name="camera_permissionError">"Error creating media file, check storage permissions: "</string>
    <string name="camera_savedTo">"Image saved in: "</string>
    <string name="photo_pattern">Pattern:\n</string>
    <string name="photo_RES_OK">RESULT_OK</string>
    <string name="photo_RES_CANCEL">RESULT_CANCELED</string>
    <string name="photo_RES_FAILED">RESULT_FAILED</string>
    <string name="photo_RES_FORGOT">RESULT_FORGOT_PATTERN</string>
    <string name="QR_format">"FORMAT: "</string>
    <string name="QR_content">"CONTENT: "</string>
    <string name="QR_errorScan">No scan data received!</string>
    <string name="compass_heading">"Heading: "</string>
    <string name="compass_degrees">degrees.</string>
    <string name="sound_acc">Acceleration:\n</string>
</resources>
